# omada-client

./: CLAUDE.md  Cargo.toml  README.md
docker/: compose.yaml
docker/Dockerfiles/: Dockerfile
examples/: ap_radio_config.rs
src/: lib.rs  models.rs
