[package]
name = "omada-client"
version = "0.1.0"
edition = "2024"

[features]
## Use `serde_json` as the JSON backend (default).
default = ["serde_json"]
## Use `serde_json` as the JSON backend.
serde_json = ["dep:serde_json"]
## Use `sonic-rs` as the JSON backend (mutually exclusive with `serde_json`).
sonic-rs = ["dep:sonic-rs"]

[dependencies]
reqwest = { version = "0.13.2", features = ["query"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sonic-rs = { version = "0", optional = true }
thiserror = "2"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0"

[dev-dependencies]
serde_json = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["macros"] }
dotenvy = "0.15"
env_logger = "0.11"
